--- a/Example/IVSWebViewController/Base.lproj/Main.storyboard
+++ b/Example/IVSWebViewController/Base.lproj/Main.storyboard
@@ -19,12 +19,31 @@
                     <view key="view" contentMode="scaleToFill" id="TpU-gO-2f1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Av2-u8-2SG">
+                                <rect key="frame" x="0.0" y="20" width="375" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="An4-dV-2Cp"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="https://www.google.com"/>
+                                <connections>
+                                    <action selector="onOpenWebSite" destination="whP-gf-Uak" eventType="touchUpInside" id="7sf-e3-kB8"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Av2-u8-2SG" firstAttribute="top" secondItem="uEw-UM-LJ8" secondAttribute="bottom" id="64x-fr-0mw"/>
+                            <constraint firstAttribute="trailing" secondItem="Av2-u8-2SG" secondAttribute="trailing" id="IWY-5I-WEF"/>
+                            <constraint firstItem="Av2-u8-2SG" firstAttribute="leading" secondItem="TpU-gO-2f1" secondAttribute="leading" id="c5f-Tp-vAI"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tc2-Qw-aMS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="433"/>
+            <point key="canvasLocation" x="304.80000000000001" y="432.23388305847078"/>
         </scene>
     </scenes>
 </document>
